force-app/main/default/objects/gr_GoalActivity__c/gr_GoalActivity__c.object-meta.xml
<CustomObject>
    <label>Goal Activity</label>
    <nameField>
        <label>Goal Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>