force-app/main/default/objects/gr_GoalActivity__c/fields/gr_Goal_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>gr_Goal_Activity_Description__c</fullName>
    <description>A description of the grant program, grant program project, or Federal award project activity and its alignment to goals, results and performance measures, expenditures, or other achievements. (compiled from 203)</description>
    <label>Goal Activity Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>