force-app/main/default/objects/gr_GoalActivity__c/fields/gr_Goal_Activity_Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>gr_Goal_Activity_Stage_Status__c</fullName>
    <description>A code denoting whether the grant program, grant program project, or Federal award project activity is planned or accomplished.</description>
    <label>Goal Activity Stage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Accomplished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>