force-app/main/default/objects/gr_GoalActivity__c/fields/gr_GoalActivityReportingFrequencyType__c.field-meta.xml
<CustomField>
    <fullName>gr_GoalActivityReportingFrequencyType__c</fullName>
    <description>A code denoting the appropriate reporting term corresponding to the grant program, grant program project, or Federal award project activity.</description>
    <label>Goal Activity Reporting Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>