force-app/main/default/objects/gr_GoalActivity__c/fields/gr_GoalId__c.field-meta.xml
<CustomField>
    <fullName>gr_GoalId__c</fullName>
    <description>A number or label used to identify a particular grant program or Federal award project goal and associate the goal with target dates, activities, and performance measures.</description>
    <label>Goal</label>
    <referenceTo>gr_Goal__c</referenceTo>
    <relationshipLabel>Goal Activities</relationshipLabel>
    <relationshipName>Goal_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>